--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
 </table>
 <p style="line-height: 100%; margin-bottom: 0in"><br/>
 
-</p>
-<h2 lang="ca-ES" class="western" style="page-break-before: always"><font color="#000000"><font size="3" style="font-size: 12pt"><span lang="ca-ES">Miquel</span></font></font><font color="#000000"><font size="3" style="font-size: 12pt"><span lang="ca-ES"><b>ÀngelAlcalde Velado - 43086098Z</b></span></font></font></h2>
-<h1 class="western"><span lang="ca-ES">Exercici 1: Clip de vídeo incrustat en HTML 5.</span></h1>
-<p lang="ca-ES" align="justify" style="line-height: 100%; orphans: 2; widows: 2; margin-bottom: 0.08in">
-<img src="img/index_html_f577386ceadeaae0.gif" align="left" width="1920" height="1080"/>
 <br/>
-<br/>
-<video src="video/asset_02.mp4"
+
+<video poster="img/asset_02.poster.jpg" controls="true" width="1280" height="720">
+<source src="video/asset_02_h264_high_5.1_720p.mp4" type="video/mp4">
+<source src="video/asset_02_vp9_720p.webm" type="video/webm">
+</video>
+
 </p>
 <p lang="ca-ES" align="justify" style="line-height: 100%; orphans: 2; widows: 2; margin-bottom: 0.08in">
 <br/>
