--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 	<a href="#" id="video-q1.4" onclick="toggleVideo()">Show/Hide Video Question 1.4</a>
 	<video id="video" src="path/to/video.mp4" controls="true" width="1280" height="720">
-		<source src="video/clip01.mkv" type="video/mp4">
+		<source src="video/clip01.mkv" type="video/x-matroska">
 	</video>
 
 </body>
