--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
 	}
 	</script>
 
-	<a href="#" id="video-q1.4" onclick="toggleVideo()">Show/Hide Video Question 1.4</a>
-	<video id="video" controls="true" width="1280" height="720" style="display: none;">
+	<a href="#" id="video-q1.4.link" onclick="toggleVideo()">Show/Hide Video Question 1.4</a>
+	<video id="video-q1.4" controls="true" width="1280" height="720" style="display: none;">
 		<source src="video/clip01.mkv" type="video/x-matroska">
 	</video>
 
